tests/compilefail73.out
[1mtests/compilefail73.pas:10:13: [0m[1m[91merror:[0m Function odd() requires parameter of integer type
    10 | 	writeln(odd(r));