tests/compilefail73.pas
program compilefail73(output);
{invalid use of odd}


var r:real;


begin
	r := 4.6;
	writeln(odd(r));
end.
